# sample-python-build-conda-pip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint-and-build.yaml  lint.yaml  run-lint-and-build-with-micromamba.yaml  run-lint-and-build-with-pixi.yaml  run-lint-with-micromamba-and-build-with-ratller.yaml  run-lint-with-pixi.yaml  run-lint.yaml
conda.recipe/: meta.yaml  recipe.yaml
src/sample_package/: __init__.py
tests/: test_sample_package.py
