[project]
authors = [{name = "sumanth-manchala"}]
dependencies = []
name = "sample-python-build-conda-pip"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/sample_package"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge", "https://prefix.dev/pixi-build-backends"]
platforms = ["osx-arm64", "win-64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
ruff = "*"

[tool.pixi.package.host-dependencies]
hatchling = "==1.27.0"
python = ">=3.12"

[tool.pixi.pypi-dependencies]
sample_python_build_conda_pip = { path = ".", editable = true }

[tool.pixi.tasks]
lint  = "ruff check ."

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }